[tool.poetry]
name = "zipline"
version = "0.1.0"
description = "An assignment to demonstrate strong technical skills"
authors = ["Muragijimana <murag.richard@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
