[tool.poetry]
name = "zipline"
version = "0.1.0"
description = "A Flask-based inventory management and order processing system"
authors = ["Richard Muragijimana <murag.richard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.5"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"